tests/parse_print/random_perturb/set01/delete-04/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/delete-04/delete-04.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/delete-04/delete-04.essence:3:7:
  |
3 | find  : set (size 2) of int(1..3)
  |       ^
Missing <identifier>
